# netrom-stl

./: CMakeLists.txt  build.sh  compile_commands.json  input.txt  main.cpp
.cache/clangd/index/: Doctor.cpp.24FA0F692EA88933.idx  Doctor.hpp.59ECD598F1D25B3A.idx  Pacient.cpp.EDB20A3C990A2825.idx  Pacient.hpp.2A3B12CA975BFCBD.idx  Stl.cpp.2EF7AA9B6AC5256A.idx  Stl.cpp.53040FA216F1F527.idx  Stl.hpp.ABA0742D3B60089D.idx  Stl.hpp.BABC22B11CC7EC7B.idx  main.cpp.19FFA03BE7CC597B.idx  main.cpp.1D11E61F2E190F14.idx  main.cpp.4DF1BD3766BAE5C2.idx
include/: Doctor.hpp  Pacient.hpp  Stl.hpp
include/doctors/: BaseDoctor.hpp  IDoctor.hpp
include/emergencies/: BaseEmergency.hpp  IEmergency.hpp
src/: Doctor.cpp  Pacient.cpp  Stl.cpp
src/doctors/: BaseDoctor.cpp
src/emergencies/: BaseEmergency.cpp
